--- a/main.css
+++ b/main.css
@@ -2,6 +2,52 @@
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
 body {
+background: url(https://cdn.pixabay.com/photo/2016/02/15/11/38/background-1201003_960_720.jpg);
+background-size: cover;
+background-position: center;
+font-family: Lato;
+color: white;
+}
+
+html {
+	height: 100%;
+}
+
+
+#content1 {
+	text-align: center;
+	padding-top: 10%;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
+
+}
+
+
+h1 {
+	font-weight: 700;
+	font-size: 5em;
+}
+
+h2 {
+	text-align: center;
+}
+hr {
+	size: 100%;
+	width: 400px;
+	border-top: 1px solid #f8f8f8;
+	border-bottom: 1px solid rgba(0,0,0,0.2)
+}
+
+body {
+  background-color: rgb(235,235,235);
+}
+
+
+
+
+
+body {
   background-color: rgb(235,235,235);
 }
 
@@ -44,12 +90,7 @@ nav-row {
   background-color: rgb(66,133,244);
 }
 
-.page-title {
-  background-image: url("screen1.png");
-  height: 80px;
-  padding: 10px;
-  padding-left: 30px;
-}
+
 
 .sub-menu-links {
   padding: 30px;
@@ -70,25 +111,57 @@ nav-row {
 /* Main Content classes */
 
 .video {
-  background-color: white;
+  background-color: grey;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 4px 4px 4px #888888;
+}
+
+.video {
+  background-image: url("https://cdn.pixabay.com/photo/2015/05/15/05/59/demonstration-767863_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: lato;
+  color: white;
+}
+
+.about {
+  background-color: grey;
   padding: 10px;
   margin: 10px;
   box-shadow: 2px 2px 2px #888888;
 }
 
 .about {
-  background-color: white;
+  background-image: url("https://cdn.pixabay.com/photo/2016/03/09/16/49/landscape-1246861_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: lato;
+  color: white;
+}
+
+.contact-us {
+  background-image: url("https://cdn.pixabay.com/photo/2013/07/18/10/56/domino-163523_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: lato;
+  color: white;
+}
+.testimonials {
+  background-color: grey;
   padding: 10px;
   margin: 10px;
   box-shadow: 2px 2px 2px #888888;
 }
 
 .testimonials {
-  background-color: white;
-  padding: 10px;
-  margin: 10px;
-  box-shadow: 2px 2px 2px #888888;
+  background-image: url("https://cdn.pixabay.com/photo/2015/11/07/11/16/coffee-1030971_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: Lato;
+  color: white;
 }
+
 
 .testimonials p {
   height: 130px;
@@ -101,7 +174,7 @@ nav-row {
 }
 
 .contact-us {
-  background-color: white;
+  background-color: grey;
   padding: 10px;
   margin: 10px;
   box-shadow: 2px 2px 2px #888888;
@@ -111,50 +184,26 @@ nav-row {
   padding: 10px;
 }
 
-.examples {
-  background-image: url("assets/misc/ignasi-pattern.png");
-  padding: 10px;
-  margin: 10px;
-  border: 10px solid white;
-}
+
 
 /* Sidebar classes */
 
-.sidebar-button {
-  padding: 10px;
-  margin: 5px;
-  text-transform: uppercase;
-  background-color: rgb(44,55,59);
-  color: white;
-  border: none;
-}
 
-.sidebar-button2 {
-  padding: 10px;
-  margin: 5px;
-  text-transform: uppercase;
-  background-color: rgb(0,199,228);
-  color: white;
-  border: none;
-}
+
 
 .creator {
-  background-color: white;
+  background-color: grey;
   padding: 10px;
   margin: 10px;
 }
 
 .features {
-  background-color: white;
+  background-color: grey;
   padding: 10px;
   margin: 10px;
 }
 
-.resources {
-  background-color: white;
-  padding: 10px;
-  margin: 10px;
-}
+
 
 /* Bottom content */
 
@@ -186,3 +235,20 @@ nav-row {
   color: white;
   padding: 20px 50px;
 }
+
+/*example*/
+
+#footer {
+  border-top: 2px solid grey;
+  background: #506682;
+  color: white;
+  height: 200px;
+}
+#footer ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+#footer h5 {
+  font-family: Rock Salt;
+}
+
